Introduce followers and following request.

--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -1,1 +1,5 @@
-<app-top-bar></app-top-bar>
+<div id="appContainer">
+    <app-top-bar></app-top-bar>
+    <app-user-container></app-user-container>
+    <app-middle-container></app-middle-container>
+</div>
